# MyQuizGyujtemeny

./: .gitignore  MagyarTöréneleme.json  README.md  main.py  megyék.json  pyproject.toml  szilveszter_világszerte.json  találoskérdés.json  városok.json  wot.json
quizGenerator/: 1_quiz.json  2_quiz.json  generator.py  quiz.json  shema.py  thema.json
quizGenerator/quiz/: europe_countries_weird_facts.json  general_knowledge_funny.json  history_biggest_mistakes.json  hungary_history_kings_funny.json  medieval_life_funny.json  rivers_mountains_lost_tourists.json  science_weird_facts.json  space_and_aliens_funny.json
v0.1/: MagyarTöréneleme.json  flags_and_countries_funny.json  history_modern_view_funny.json  hungarian_food_funny.json  hungary_geography_funny.json  hungary_history_kings_funny.json  megyék.json  science_funny_answers.json  szilveszter_világszerte.json  találoskérdés.json  városok.json  world_map_tricky_geography.json  wot.json
